--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 body {
 	font-family: 'Bruno Ace', cursive;
 }
+h1 {
+	text-align: center;
+	font-size: 50px;
+	color: orange;
+	background-color: black;
+	border-radius: 10px;
+	padding: 10px;
+	margin-bottom: 100px;
+}
+button {
+	background-color: orange;
+	font-weight: 700;
+	font-size: 40px;
+	border: 5px solid;
+	border-radius: 10px;
+	padding: 10px;
+	transition: all 400ms ease;
+}
+button a {
+	text-decoration: none;
+	color: black;
+}
+button:hover {
+	background-color: black;
+}
+button a:hover {
+	color: orange;
+}
+footer {
+	text-align: center;
+	margin-top: 380px;
+}
+footer a {
+	color: black;
+}
+.btn-container {
+	display: flex;
+	justify-content: space-evenly;
+}
+#myVideo {
+	position: fixed;
+	top: 0;
+	right: 0;
+	min-width: 100%;
+	min-height: 100%;
+	z-index: -10;
+}
