--- a/firstTimer/style.css
+++ b/firstTimer/style.css
@@ -6,7 +6,7 @@ button {
   background-color: orange;
   font-weight: 700;
   font-size: 40px;
-  border: 5px solid;
+  border: 5px solid black;
   border-radius: 10px;
   padding: 10px;
   transition: all 400ms ease;
