--- a/thirdTimer/style.css
+++ b/thirdTimer/style.css
@@ -4,6 +4,7 @@ body {
 
 button {
   background-color: orange;
+  color: black;
   font-weight: 700;
   font-size: 40px;
   border: 5px solid black;
