--- a/style.css
+++ b/style.css
@@ -50,3 +50,12 @@ footer a {
 	min-height: 100%;
 	z-index: -10;
 }
+@media all and (max-width:600px) {
+	footer {
+		margin-top: 150px;
+	}
+	h1 {
+		font-size: 40px;
+		margin-bottom: 20px;
+	}
+}
